# pgmq-py

./: .gitignore  AGENTS.md  Makefile  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: changelog.yml  docs.yml  pgmq_python.yml  release.yml  sql_install_tests.yml  vendor_pgmq_sql.yml
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/backward_compatibility/: index.html
1.1.0/clients/: index.html
1.1.0/configuration/: index.html
1.1.0/deleting_and_archiving/: index.html
1.1.0/development/: index.html
1.1.0/getting_started/: index.html
1.1.0/logging/: index.html
1.1.0/messages/: index.html
1.1.0/metrics/: index.html
1.1.0/notifications/: index.html
1.1.0/queue_management/: index.html
1.1.0/reading_messages/: index.html
1.1.0/sending_messages/: index.html
1.1.0/topic_routing/: index.html
1.1.0/transactions/: index.html
1.1.0/utilities/: index.html
1.1.0/visibility_timeout/: index.html
1.1.1/: 404.html  index.html  sitemap.xml
1.1.1/backward_compatibility/: index.html
1.1.1/clients/: index.html
1.1.1/configuration/: index.html
1.1.1/deleting_and_archiving/: index.html
1.1.1/development/: index.html
1.1.1/getting_started/: index.html
1.1.1/logging/: index.html
1.1.2/: 404.html  index.html  sitemap.xml
docs/: backward_compatibility.md  clients.md  configuration.md  deleting_and_archiving.md  development.md  getting_started.md  index.md  logging.md  messages.md  metrics.md  notifications.md  queue_management.md  reading_messages.md  sending_messages.md  sql_installation.md  swagger.yaml  topic_routing.md  transactions.md  utilities.md  visibility_timeout.md
main/: 404.html  index.html  sitemap.xml
scripts/: pgmq_extension_release_status.py  vendor_pgmq_sql.py
src/pgmq/: api.py  (+15 more)
tests/: __init__.py  temp_test.py  test_api.py  test_async_integration.py  test_async_queue.py  test_features.py  test_install.py  test_integration.py  test_logger.py  test_notify_listener.py  test_routing.py  test_sql_conversion.py  test_sqlalchemy_async_integration.py  test_sqlalchemy_integration.py  test_sqlalchemy_unit.py  test_sync_queue.py  utils.py
(+48 files in other folders)
