[project]
name = "pgmq"
version = "1.1.2"
description = "Python client for the PGMQ Postgres extension."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["pgmq", "postgres", "queue", "async", "messaging"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    "Topic :: Communications",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

authors = [
    { name = "Adam Hendel",email = "adam@hendel.dev" },
    { name = "Ali Tavallaie", email = "ali@techbend.dev" },
]
dependencies = [
    "orjson>=3.11.3",
    "psycopg[binary,pool]>=3.2.10",
]

[project.optional-dependencies]
async = ["asyncpg>=0.30.0"]
sqlalchemy = ["sqlalchemy>=2.0.0"]
sqlalchemy-async = ["sqlalchemy[asyncio]>=2.0.0", "asyncpg>=0.30.0"]

[dependency-groups]
bench = [
    "locust>=2.34.0",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "scipy>=1.13.1",
    "typer>=0.17.4",
]
dev = [
    "loguru>=0.7.3",
    "pre-commit>=4.3.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.12.12",
]
docs = [
    "mike>=2.2.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
]

[project.urls]
Homepage = "https://github.com/pgmq/pgmq"
Repository = "https://github.com/pgmq/pgmq-py"
Documentation = "https://github.com/pgmq/pgmq-py"
"Bug Tracker" = "https://github.com/pgmq/pgmq-py/issues"
Changelog = "https://github.com/pgmq/pgmq-py/releases"


[tool.uv.build-backend]
source-include = ["src/pgmq/sql/pgmq.sql"]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
